@startuml

title __CONTROL's Class Diagram__\n

  package  {
    package control {
      class SearchController {
          - airports : ArrayList<Airport>
          + SearchController()
          + searchForFlight()
          + getAirports()
          + retrieveAirports()
          - retrieveFlights()
          - jsonObjectToFlight()
          - retrieveDiscountByFlightID()
          - jsonObjectToAirport()
      }
    }
  }
  

  package  {
    package control {
      class UIController {
          {static} - shared : UIController
          - archivedRoutes : ArrayList<ArrayList<Route>>
          - routeResult : ArrayList<Route>
          - UIController()
          {static} + getInstance()
          + logIn()
          + register()
          + searchForFlights()
          + getResults()
          + getAirports()
          + applyDiscount()
          + logout()
          + checkForHigherAccess()
      }
    }
  }
  

  package  {
    package control {
      class UserControl {
          + UserControl()
          + getUser()
          + createUser()
          - validateUsername()
          - validatePassword()
      }
    }
  }
  

  SearchController o-- getRequestHandler : dbHandler
  SearchController o-- Grapher : shortestPath
  UIController o-- User : currentUser
  UIController o-- UserControl : userCon
  UIController o-- SearchController : searchCon
  UIController o-- insertRequestHandler : insertHandler
  UserControl o-- SimpleUserFactory : userFactory
  UserControl o-- getRequestHandler : dbPullHandler
  UserControl o-- insertRequestHandler : dbInsertHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
